2024-01-27T08:16:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677408278 # 61
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 6 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1891 182229 / 1920 186424
* notice: next accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186536
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-01-13 2024-01-27]

2024-01-27T01:04:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7675230154 # 60
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 6 4120
* notice: prev accum: outdated-unq outdated-all / unq all: 1887 181928 / 1920 186329
* notice: next accum: outdated-unq outdated-all / unq all: 1891 182229 / 1920 186424
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -75 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2024-01-12] / [2024-01-13 2024-01-26]

2024-01-26T16:18:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7670601444 # 59
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 6 4140
* notice: prev accum: outdated-unq outdated-all / unq all: 1887 181928 / 1920 186235
* notice: next accum: outdated-unq outdated-all / unq all: 1887 181928 / 1920 186329
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -2 -94 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2024-01-12 2024-01-26]

2024-01-26T08:19:04Z: