@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-27T08:16:49Z",
-  "count" : 132,
-  "count_minmax" : [ 111, 298 ],
-  "count_decinc" : [ -166, +298 ],
+  "timestamp" : "2024-01-27T16:16:49Z",
+  "count" : 40,
+  "count_minmax" : [ 40, 298 ],
+  "count_decinc" : [ -258, +298 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
