@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-27T08:16:49Z",
+  "timestamp" : "2024-01-27T16:16:49Z",
   "count_outdated" : 182229,
   "uniques_outdated" : 1891,
-  "count" : 186536,
+  "count" : 186630,
   "uniques" : 1922,
   "clones" : [
     {
       "timestamp": "2024-01-13T00:00:00Z",
-      "count": 132,
-      "count_minmax": [ 111, 298 ],
-      "count_decinc": [ 166, 298 ],
+      "count": 40,
+      "count_minmax": [ 40, 298 ],
+      "count_decinc": [ 258, 298 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-01-27T00:00:00Z",
-      "count": 112,
-      "count_minmax": [ 112, 112 ],
-      "count_decinc": [ 0, 112 ],
+      "count": 206,
+      "count_minmax": [ 112, 206 ],
+      "count_decinc": [ 0, 206 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
