@@ -1,3 +1,12 @@
+2024-01-27T16:16:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7679769427 # 62
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
+* notice: last 14d: unq all: 6 4143
+* notice: prev accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186536
+* notice: next accum: outdated-unq outdated-all / unq all: 1891 182229 / 1922 186630
+* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -92 / +2 +206 -0 -0 / 2 206
+* notice: removed / changed dates: [] / [2024-01-13 2024-01-27]
+
 2024-01-27T08:16:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677408278 # 61
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
